...

            NavigationLink {
                PreferencesSettingsView(viewModel: self.viewModel)
            } label: {
                Label(Strings.Settings.preferencesTitle, systemImage: "gearshape")
            }
            .accessibilityIdentifier("preferences-settings-link")

            Button {
                #if canImport(UIKit)
                    if let url = URL(string: UIApplication.openSettingsURLString) {
                        UIApplication.shared.open(url)
                    }
...
